--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-life-3d-threejs",
+  "name": "js-petri-3d-threejs",
   "version": "0.0.1",
-  "homepage": "https://github.com/leegee/js-life-3d-threejs",
+  "homepage": "https://github.com/leegee/js-petri-3d-threejs",
   "authors": [
     "lee <bower@leegoddard.net>"
   ],
